--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,6 @@
 !!!
 
-%html
+%html{ :manifest => '/application.manifest' }
   %head
     %meta{ 'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8' }
     %meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' }
@@ -9,7 +9,6 @@
       %script{ :src => 'https://html5shim.googlecode.com/svn/trunk/html5.js', :type => 'text/javascript' }
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
-    = csrf_meta_tags
 
   %body
     = yield
