--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,15 +1,17 @@
 !!!
 
-%html{ :manifest => '/application.manifest' }
+%html{ :manifest => 'application.manifest' }
   %head
     %meta{ 'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8' }
     %meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' }
+    %meta{ :name => 'csrf-param', :content => request_forgery_protection_token }
+    %meta{ :name => 'csrf-token' }
+    - form_authenticity_token
     %title Passmaster
     /[if lt IE 9]
       %script{ :src => 'https://html5shim.googlecode.com/svn/trunk/html5.js', :type => 'text/javascript' }
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
-    = csrf_meta_tags
 
   %body
     = yield
