update gems to resolve a number of security vulnerabilities

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,19 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2015-06-16
+    %ul
+      %li Security updates
+      %ul
+        %li
+          %a{ :target => '_blank', :href => 'http://seclists.org/oss-sec/2015/q2/729' } CVE-2015-3225
+        %li
+          %a{ :target => '_blank', :href => 'http://seclists.org/oss-sec/2015/q2/732' } CVE-2015-3226
+        %li
+          %a{ :target => '_blank', :href => 'http://seclists.org/oss-sec/2015/q2/731' } CVE-2015-3227
+        %li
+          %a{ :target => '_blank', :href => 'http://seclists.org/oss-sec/2015/q2/730' } CVE-2015-1840
+
     %h4.update-date 2015-03-06
     %ul
       %li Better error handling when Touch ID authentication is unsuccessful
