update rails to 5.0.7 and address CVE-2018-3760 - Path Traversal in Sprockets

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,11 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2018-06-19
+    %ul
+      %li Update to Rails 5.0.7
+      %li Security Update for CVE-2018-3760 - Path Traversal in Sprockets
+
     %h4.update-date 2017-09-11
     %ul
       %li
