Update to Rails 5.0.7.2 - CVE-2019-5419, CVE-2019-5418

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2019-03-15
+    %ul
+      %li Update to Rails 5.0.7.2 - CVE-2019-5419, CVE-2019-5418
+
     %h4.update-date 2018-12-08
     %ul
       %li Add support for unlocking accounts using Face ID in the iOS app
